# node-parallel

./: .gitignore  CMakeLists.txt  README.md  bench-vanilla.js  binding.gyp  package.json  test-2.js  test.js  tsconfig.json
src/: Exceptions.h  PosixSharedBuffer.cpp  SharedBuffer.h  SystemVSharedBuffer.cpp  main.cpp
src/cpp/: SharedMemory.cpp  SharedMemory.h  boot.cpp
src/cpp/addon/: Buffer.cpp  Buffer.h  IPC_Callee.cpp  IPC_Callee.h  IPC_Caller.cpp  IPC_Caller.h  Store.cpp  Store.h  Types.h  Utils.cpp  Utils.h  addon.cpp
src/cpp/allocator/: Allocator.cpp  Allocator.h  PoolAllocator.cpp  PoolAllocator.h  STL.cpp  STL.h
src/cpp/ipc/: IPC.cpp  IPC.h  Message.cpp  Message.h  Worker.cpp  Worker.h
src/cpp/platform/: Platform.h  Unix.cpp  Unix.h
src/cpp/utils/: Configuration.cpp  Configuration.h  Exceptions.h  LinkedList.h  Logger.cpp  Logger.h  PointerUtils.h  SpinLock.h
src/ts/: addon.ts  callee.ts  caller.ts  index.ts  modules.d.ts  store.ts  types.ts  utils.ts
